display: block;     margin-top: 160px;     width: 56px;     height: 56px;     border-radius: 50%;    /* background: radial-gradient(circle  closest-side, #BDBDBD  5px, white 20px, #BDBDBD 1px, white 30px);*/ background-image: radial-gradient(circle at 50% 50%, #FFFFFF  15px, #808080 23px, #FFFFFF  30px, #C0C0C0 39px, transparent 40px), radial-gradient(circle at 50% 50%, #FFFFFF  15px, #808080 23px, #FFFFFF  30px, #C0C0C0 39px, transparent 40px); width: 640px; height: 240px; background-size: 160px 160px; background-position: -40px -40px ;

--- a/chess.html
+++ b/chess.html
@@ -10,7 +10,7 @@
 <body>
     <p>шашки</p>
         <div class="chess"> 
-                <div class="black"></d>
+                <div class="black"></div>
                 <div class="wite"></div>
         </div>    
             
